[gd_scene load_steps=23 format=3 uid="uid://bfpjsmukvoays"]

[ext_resource type="Theme" uid="uid://3x7giy0h6m5f" path="res://graphics/master_theme.tres" id="1_4bf1b"]
[ext_resource type="FontFile" uid="uid://fargnt02lbij" path="res://fonts/Mx437_DOS-V_re_JPN30.ttf" id="2_8a7t1"]
[ext_resource type="PackedScene" uid="uid://wigs4me5aqt3" path="res://scenes/white_line.tscn" id="2_jx0n4"]
[ext_resource type="Script" path="res://scenes/bloomberg_terminal.gd" id="2_nxhbo"]
[ext_resource type="PackedScene" uid="uid://3jm5o8wkiebn" path="res://scenes/stock.tscn" id="2_xtl88"]
[ext_resource type="PackedScene" uid="uid://bv3if0sftqybh" path="res://scenes/news_flash.tscn" id="3_kvf7m"]
[ext_resource type="PackedScene" uid="uid://cyxpqxtjbuxo8" path="res://scenes/stock_graph.tscn" id="6_ma82b"]
[ext_resource type="PackedScene" uid="uid://b72kudcgdxyne" path="res://scenes/company_desc_vis.tscn" id="6_n1yuu"]
[ext_resource type="PackedScene" uid="uid://bbhwblwx6eo8p" path="res://scenes/deck.tscn" id="8_0qqq5"]
[ext_resource type="PackedScene" uid="uid://d1fpdd86g4mix" path="res://scenes/card_market.tscn" id="8_ppxus"]
[ext_resource type="PackedScene" uid="uid://bdq78udxiavn3" path="res://scenes/card_hand.tscn" id="9_u7vq2"]

[sub_resource type="Gradient" id="Gradient_0nyuj"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.680851)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jhcwt"]
gradient = SubResource("Gradient_0nyuj")
width = 24
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1emk"]
size = Vector2(75, 105)

[sub_resource type="Curve" id="Curve_ul06x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.964687, 0), -2.59279, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_x8ljj"]
curve = SubResource("Curve_ul06x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0i874"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(16, 64, 1)
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 131.3
initial_velocity_max = 174.61
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_x8ljj")
color = Color(0, 0, 1, 1)

[sub_resource type="Gradient" id="Gradient_bqe4y"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.578696)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j83y7"]
gradient = SubResource("Gradient_bqe4y")
width = 4
height = 4
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_c6f1e"]
resource_name = "sell_flicker"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/sell_color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 0), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jk7oa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/sell_color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6ke8"]
_data = {
"RESET": SubResource("Animation_jk7oa"),
"sell_flicker": SubResource("Animation_c6f1e")
}

[node name="BloombergTerminal" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4bf1b")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("2_nxhbo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 32

[node name="header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8a7t1")
theme_override_font_sizes/font_size = 32
text = "GLOOMBERG TERMINAL V4.3"

[node name="white_line" parent="VBoxContainer/header" instance=ExtResource("2_jx0n4")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/header"]
layout_mode = 2

[node name="money" type="Label" parent="VBoxContainer/header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "â‚­ 1 000"
vertical_alignment = 1

[node name="date" type="Label" parent="VBoxContainer/header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1 DEC 2057"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="VBoxContainer/header/HBoxContainer"]
layout_mode = 2
value = 90.0
fill_mode = 5
texture_progress = SubResource("GradientTexture2D_jhcwt")

[node name="white_line2" parent="VBoxContainer/header" instance=ExtResource("2_jx0n4")]
layout_mode = 2

[node name="main_layout" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="left" type="HBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.35
theme_override_constants/separation = 32

[node name="stonk_list" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer"]
layout_mode = 2

[node name="Stock" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock2" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock3" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock4" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock5" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock6" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="Stock7" parent="VBoxContainer/main_layout/VBoxContainer/left/stonk_list/MarginContainer/VBoxContainer" instance=ExtResource("2_xtl88")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_horizontal = 1
script = null

[node name="mid" type="VBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer"]
layout_mode = 2
text = "INFO"

[node name="white_line" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer" instance=ExtResource("2_jx0n4")]
layout_mode = 2

[node name="graph_box" type="HBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="stonk_graph" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box/stonk_graph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box/stonk_graph/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StockGraph" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box/stonk_graph/MarginContainer/CenterContainer" instance=ExtResource("6_ma82b")]
width = 484.0
height = 90.0

[node name="Panel" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CompanyDescVis" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/VBoxContainer/graph_box/Panel" instance=ExtResource("6_n1yuu")]
layout_mode = 1

[node name="white_line" parent="VBoxContainer/main_layout/VBoxContainer/left/mid" instance=ExtResource("2_jx0n4")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Label" type="Label" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "MARKET"
vertical_alignment = 2

[node name="white_line" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer" instance=ExtResource("2_jx0n4")]
layout_mode = 2

[node name="draft" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardMarket" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer/draft" instance=ExtResource("8_ppxus")]
layout_mode = 1
anchors_preset = 15
anchor_bottom = 1.0
offset_bottom = 0.0
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8a7t1")
theme_override_font_sizes/font_size = 32
text = "SELL"
horizontal_alignment = 1

[node name="white_line" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2" instance=ExtResource("2_jx0n4")]
layout_mode = 2

[node name="sell" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/CenterContainer" groups=["sell_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/CenterContainer/Area2D"]
shape = SubResource("RectangleShape2D_x1emk")

[node name="GPUParticles2D" type="GPUParticles2D" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/CenterContainer"]
visible = false
z_index = 1
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_0i874")
texture = SubResource("GradientTexture2D_j83y7")
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.59
randomness = 1.0
trail_enabled = true
trail_sections = 4
trail_section_subdivisions = 1

[node name="sell_color" type="ColorRect" parent="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/main_layout/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/main_layout/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/main_layout/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="Deck" parent="VBoxContainer/main_layout/VBoxContainer/MarginContainer/HBoxContainer/Panel" instance=ExtResource("8_0qqq5")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="CardHand" parent="VBoxContainer/main_layout/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("9_u7vq2")]
layout_mode = 2
size_flags_horizontal = 3

[node name="white_line" parent="VBoxContainer/main_layout/VBoxContainer" instance=ExtResource("2_jx0n4")]
visible = false
layout_mode = 2

[node name="news" type="VBoxContainer" parent="VBoxContainer/main_layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout/news"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/main_layout/news/VBoxContainer"]
layout_mode = 2
text = "NEWS"

[node name="white_line" parent="VBoxContainer/main_layout/news/VBoxContainer" instance=ExtResource("2_jx0n4")]
visible = false
layout_mode = 2

[node name="news" type="Panel" parent="VBoxContainer/main_layout/news"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/main_layout/news/news"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/main_layout/news/news/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewsFlash" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash2" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash3" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash4" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash5" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash6" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash7" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash8" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash9" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="NewsFlash10" parent="VBoxContainer/main_layout/news/news/ScrollContainer/VBoxContainer" instance=ExtResource("3_kvf7m")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t6ke8")
}

[connection signal="area_entered" from="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/CenterContainer/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="VBoxContainer/main_layout/VBoxContainer/left/mid/HBoxContainer/VBoxContainer2/sell/CenterContainer/Area2D" to="." method="_on_area_2d_area_exited"]
